--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+//Gson依赖
 dependencies {
     compile group:'com.google.code.gson',name:'gson',version:'2.3.1'
 }
