--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile group:'com.google.code.gson',name:'gson',version:'2.3.1'
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 //MPAndroidChat依赖
 dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
