1.修改饼状图的高度（自己建了个类，继承PieChart 重写onMeasure方法） 2.添加百分比布局依赖 3.使用百分比布局，实现TextView和PieChart

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ repositories {
 //MPAndroidChat依赖
 dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.android.support:percent:23.1.1'
 }
